Create service component

--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -11,8 +11,12 @@
     font-size: 17px;
 }
 
+p{
+    font-family: 'Poppins', sans-serif;
+}
+
 .carousel-container {
-    background-color: #c3002e85;
+    background-color: #c3002e28;
     width: 100%;
     height: 100%;
     display: flex;
