--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -2,10 +2,6 @@
     color: #c3002f;
 }
 
-.brand-btn {
-    border: none;
-    color: white;
-    font-weight: 600;
-    padding: 7px 14px;
-    background-color: #c3002f;
+.brand-text-2 {
+    color: #222d35;
 }
